feat: Complete SpringBoot MCP server with VS Code integration
- Add dual-mode operation (HTTP server and stdio client)
- Implement Model Context Protocol with JSON-RPC 2.0 compliance
- Add Azure OpenAI integration with SpringAI
- Support dynamic protocol version matching for client compatibility
- Fix ID type handling to support both integer and string IDs
- Add clean stdio communication with logs routed to stderr
- Include VS Code MCP client configuration
- Provide secure .env file support for API keys
- Add comprehensive documentation and examples

Key Features:
✅ MCP protocol compliance (initialize, tools/list, tools/call, resources/*)
✅ AI-powered text generation and data analysis tools
✅ VS Code MCP client integration via stdio
✅ HTTP API for general MCP clients
✅ Mock responses when AI is not configured
✅ Production-ready with proper error handling

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,11 @@ dependencyManagement {
     }
 }
 
+// Specify main class for regular HTTP server
+springBoot {
+    mainClass = 'com.example.mcpserver.McpServerApplication'
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
