--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.github.cdimascio:dotenv-java:3.0.0'
 }
 
 dependencyManagement {
