--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,8 +1,6 @@
 # Test configuration
 logging.level.com.example.mcpserver=DEBUG
 
-# Disable Azure OpenAI for basic tests (will be overridden by .env for integration tests)
-spring.ai.azure.openai.api-key=sk-test-key-for-unit-tests-only
-spring.ai.azure.openai.endpoint=https://test.openai.azure.com/
-spring.ai.azure.openai.chat.options.deployment-name=test-deployment
-spring.ai.azure.openai.chat.options.model=gpt-35-turbo
+# Disable Azure OpenAI auto-configuration for unit tests
+spring.ai.azure.openai.enabled=false
+spring.autoconfigure.exclude=org.springframework.ai.autoconfigure.openai.OpenAiAutoConfiguration
