🎸 Complete MCP server enhancement with real logging and Rush-inspired tools
Major Features Added:
- 🎸 optic_code_generator tool inspired by Rush's precision and versatility
- 📚 Comprehensive tool examples and documentation endpoints
- 🔍
- 📖 Individual tool documentation system (mcp://tools/${TOOLNAME}/docs)

Technical Improvements:
- ✅ Fixed logging level inconsistencies (DEBUG logs now properly at DEBUG level)
- 📁 Implemented file logging with rolling policies and proper configuration
- 🔧 Real log file reading with level filtering and fallback strategies
- 📊 Enhanced resource templates for dynamic log access (mcp://logs/${LEVEL})
- 🧪 Comprehensive test coverage for all new functionality

Rush Connection:
Like Neil Peart's legendary precision, this MCP server now demonstrates
technical mastery, progressive complexity, and epic performance. The
optic_code_generator tool embodies Rush's versatility - simple yet powerful,
creating op.fromView('schema','view') expressions with Rush-like precision.

All endpoints tested and verified working with VS Code MCP integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.ai.azure.openai.chat.options.temperature=0.7
 # Logging
 logging.level.com.example.mcpserver=DEBUG
 logging.level.org.springframework.ai=DEBUG
+
+# File logging configuration
+logging.file.name=logs/mcp-server.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
+
+# Rolling file configuration
+logging.logback.rollingpolicy.file-name-pattern=logs/mcp-server.%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=30
