--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,12 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core'
     implementation 'com.fasterxml.jackson.core:jackson-annotations'
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
-    
+
+    // For splitting and generating / searching by embeddings.
+    // Probably a better way to do this via Spring AI, but this is a quick way to get started.
+    implementation 'dev.langchain4j:langchain4j:1.1.0'
+    implementation 'dev.langchain4j:langchain4j-embeddings-all-minilm-l6-v2:1.1.0-beta7'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.github.cdimascio:dotenv-java:3.0.0'
 }
@@ -44,7 +49,7 @@ springBoot {
 
 tasks.named('test') {
     useJUnitPlatform()
-    
+
     // Load environment variables from .env file for all tests
     doFirst {
         def envFile = file('.env')
@@ -62,7 +67,7 @@ tasks.named('test') {
             println "   Create .env with AZURE_OPENAI_API_KEY, AZURE_OPENAI_ENDPOINT, AZURE_OPENAI_DEPLOYMENT_NAME"
         }
     }
-    
+
     // Enhanced test result reporting
     testLogging {
         events "passed", "skipped", "failed", "standardOut", "standardError"
@@ -71,7 +76,7 @@ tasks.named('test') {
         showStackTraces true
         exceptionFormat "full"
     }
-    
+
     // Custom test result summary
     afterSuite { desc, result ->
         if (!desc.parent) { // will match the outermost suite
@@ -80,7 +85,7 @@ tasks.named('test') {
             def passed = result.successfulTestCount
             def failed = result.failedTestCount
             def skipped = result.skippedTestCount
-            
+
             if (result.resultType == TestResult.ResultType.SUCCESS) {
                 output = """
 🎸 Epic Test Results - 2112 Style! 🎸
@@ -100,7 +105,7 @@ tasks.named('test') {
 🔧 Check the details above and fix the issues!
 ═══════════════════════════════════════"""
             }
-            
+
             println output
         }
     }
