🎸 Epic MarkLogic Integration & Comprehensive Testing - 2112 Style! 🎸
✨ Major Features Added:
- 🔧 Complete MarkLogic DatabaseClient configuration with authentication support
- 🧪 Comprehensive test suite: 11 tests covering unit & integration scenarios
- 🐳 Docker support with proper .gitignore for runtime files
- 📚 MarkLogic documentation tool integration

🚀 Technical Achievements:
- Removed placeholder analyze_data tool (cleaned up 5→4 tools)
- Added robust MarkLogic configuration with Basic/Digest auth
- Created nested test structure: UnitTests + IntegrationTests
- Updated all test dependencies and Spring Boot integration
- Enhanced error handling with detailed logging

🎯 Test Coverage:
- Unit tests: Configuration logic, authentication, error handling
- Integration tests: Spring context, bean injection, property validation
- All 11 tests passing! ✅

Ready to rock with MarkLogic Server! 🚀

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,15 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s
+
+  marklogic:
+    image: "${MARKLOGIC_IMAGE_TAG}"
+    platform: linux/amd64
+    environment:
+      - MARKLOGIC_INIT=true
+      - MARKLOGIC_ADMIN_USERNAME=admin
+      - MARKLOGIC_ADMIN_PASSWORD=admin
+    volumes:
+      - ${MARKLOGIC_LOGS_VOLUME}:/var/opt/MarkLogic/Logs
+    ports:
+      - "8000-8004:8000-8004"
