--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,14 @@ spring.ai.azure.openai.chat.options.deployment-name=${AZURE_OPENAI_DEPLOYMENT_NA
 spring.ai.azure.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.azure.openai.chat.options.temperature=0.7
 
+# MarkLogic Configuration - using environment variables with defaults
+marklogic.host=${MARKLOGIC_HOST:localhost}
+marklogic.port=${MARKLOGIC_PORT:8000}
+marklogic.username=${MARKLOGIC_USERNAME:admin}
+marklogic.password=${MARKLOGIC_PASSWORD:admin}
+marklogic.database=${MARKLOGIC_DATABASE:Documents}
+marklogic.authentication=${MARKLOGIC_AUTHENTICATION:digest}
+
 # Logging
 logging.level.com.example.mcpserver=DEBUG
 logging.level.org.springframework.ai=DEBUG
