--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations'
     implementation 'io.github.cdimascio:dotenv-java:3.0.0'
 
+    // MarkLogic Java Client API
+    implementation 'com.marklogic:marklogic-client-api:7.1.0'
+
     // For splitting and generating / searching by embeddings.
     // Probably a better way to do this via Spring AI, but this is a quick way to get started.
     implementation 'dev.langchain4j:langchain4j:1.1.0'
